tests/baselines/reference/invalidUnicodeEscapeSequance2.errors.txt
invalidUnicodeEscapeSequance2.ts(1,8): error TS1127: Invalid character.


==== invalidUnicodeEscapeSequance2.ts (1 errors) ====
    var arg\uxxxx
           
!!! error TS1127: Invalid character.